# zzag-narratisedb

./: .flake8  .gitignore  CLAUDE.md  Dockerfile  INGESTION.md  README.md  findings.md  main.py  pyproject.toml
controllers/: documents.py  pdf.py  url.py
docs/: API.md  maib_links.json  schema.sql  supabase-setup.md
models/: __init__.py  pdf.py
routes/: documents.py  health.py  shield_codes.py
samples/txt/: 2022-10-Bella-Report.txt  2025-13-Finnmaster-ReportAndAnnexes.txt  2025-14-IsabellPrincessOfTheSea-Vega-Report.txt  2025-16-Karin-ReportAndAnnex.txt  AmyJane.txt  LastCallReport.txt  MAIBInvReport10-2018.txt
scripts/: extract-all-documents.sh  get-document.sh  get-headings.sh  ingest-all.sh  ingest-from-links.sh  ingest-karin.sh  ingest-pdf.sh  truncate-db.sh
scripts/development/: get-full-text.sh  ingest-from-links.sh
scripts/schema/: generate.mjs
services/: cover_parser.py  ingest_to_db.py  ingestion.py  maib_scraper.py  pdf_parser.py  pdf_parsing.py  scraper.py
services/ingestion/: __init__.py  pdf.py  shared.py  url.py
services/supabase/: client.py  service.py
shared-ai-docs/: pdf-ingestion-approach.md
supabase/: config.toml
supabase/migrations/: 20260304154544_remote_schema.sql  20260305145202_add_pdf_author_to_report_metadata.sql  20260305160000_schema_redesign.sql  20260305161000_updated_at_triggers.sql
utils/pdf/: __init__.py  _constants.py  extract_publication_date.py  extract_title.py  parse_accident_date.py  parse_loss_of_life.py  remove_cover_watermarks.py  split_into_sentences.py
